# barbot

./: .gitignore  .pylintrc  README.md
.github/workflows/: azure-static-web-apps-delightful-mushroom-0a45d4403.yml
arduino/: barbot.ino
barbot_api/: package-lock.json  package.json  utils.ts
barbot_api/actuate/: function.json  index.ts
barbot_api/drinks/: function.json  index.ts
barbot_api/job/: function.json  index.ts
barbot_api/mix/: function.json  index.ts
barbot_api/negotiate/: function.json  index.ts
barbot_api/pump/: function.json  index.ts
barbot_controller/: Dockerfile  pyproject.toml
barbot_controller/data/: config.json
barbot_controller/data/recipes/: campari_soda.json  rum_and_coke.json  violet_gin_nonalc.json
barbot_controller/src/: api.py  barbot_controller.py  pubsub_client.py  subscriber.py
barbot_ui/: Dockerfile  package-lock.json  package.json
barbot_ui/public/: index.html  manifest.json  staticwebapp.config.json
barbot_ui/src/: App.tsx  Barbot.tsx  BarbotModel.ts  BarbotService.ts  ConfigEditor.tsx  Test.tsx  index.tsx  recipes.js
barbot_ui/src/data/: config.json  ingredients.json
barbot_ui/src/data/recipes/: aperol_soda.json  aperol_spritz.json  gin_tonic.json  gin_tonic_nonalc.json  negroni.json  negroni_sbagliato.json  prosecco.json
barbot_ui/src/styles/: index.scss
